<resources>
    <string name="app_name">Blackey</string>
    <string name="bottom_return">Back</string>
    <string name="bottom_restart">Submit Again</string>
    <string name="bottom_tab_market">Trade</string>
    <string name="bottom_tab_orders">Order</string>
    <string name="bottom_tab_wallet">Wallet</string>
    <string name="bottom_tab_mine">Mine</string>
    <string name="title_market">Buy Monero</string>
    <string name="title_wallet">My Wallets</string>
    <string name="title_search">Search</string>
    <string name="publish">Publish</string>
    <string name="trust">Trusted Traders</string>
    <string name="advertising">Advertisments</string>
    <string name="register">Sign Up</string>
    <string name="hint_login_mobile">Please input cell phone No.</string>
    <string name="hint_login_password">Please input password</string>
    <string name="country">Country/Region</string>
    <string name="hint_country">Please choose country/region</string>
    <string name="mobile_register">Regist Cell Phone</string>
    <string name="hint_set_login_password">Please input password</string>
    <string name="hint_login_captcha">Please input SMS code</string>
    <string name="get_captcha">Get SMS code</string>
    <string name="read_agree">Agree</string>
    <string name="terms_service">《51XMR Terms of Service》</string>
    <string name="next_step">Next</string>
    <string name="reset_password">Reset Password</string>
    <string name="hint_set_new_password">Please input new password(6-16 digitals or character)</string>
    <string name="hint_confirm_password">Please input new password again</string>
    <string name="invalid_username_password">user name or password is not correct！</string>
    <string name="choose_country">Choose country/region</string>
    <string name="phone_number_is_exist">The cell phone has been registered</string>
    <string name="loading">Loading, Please Wait...</string>
    <string name="hint_read_terms_service">You must agree to the terms of service to continue</string>
    <string name="registered_successfully">Sign up successfully</string>
    <string name="password_weak">Continue typing &#8230;</string>
    <string name="password_fair">Meh &#8230;</string>
    <string name="password_good">C\'mon, you can do better!</string>
    <string name="password_strong">Getting there &#8230;</string>
    <string name="password_very_strong">Yeah baby, h4x0r style!</string>
    <string name="nfc_backup_recovery_password" />
    <string name="LoadMoreView_loadingHint">Loading...</string>
    <string name="LoadMoreView_completeHint">More</string>
    <string name="LoadMoreView_errorHint">Load failed，Click to reload.</string>
    <string name="LoadMoreView_noMoreHint">no more~</string>
    <string name="buy">Buy</string>
    <string name="deal">Trade</string>
    <string name="good_reputation">Like</string>
    <string name="quota">Limit</string>
    <string name="processing">Processing</string>
    <string name="finished">Finished</string>
    <string name="order_status_unpaid">Wait for payment</string>
    <string name="order_status_prepaid">Wait for confirm</string>
    <string name="order_status_complete">Finished</string>
    <string name="order_status_cancel">Canceled</string>
    <string name="order_status_timeout">Timeout</string>
    <string name="buyer_order_status_unpaid">已线下转账</string>
    <string name="seller_order_status_unpaid">待买家转账</string>
    <string name="buyer_status_prepaid">待卖家确认</string>
    <string name="seller_status_prepaid">确认收款</string>
    <string name="order_type_sell">Sell</string>
    <string name="order_type_buy">Buy</string>
    <string name="transaction_amount">Amount</string>
    <string name="number_transaction">Quantity</string>
    <string name="transaction_value">Price</string>
    <string name="order_no">Order NO.</string>
    <string name="invite_friends">Invite friends</string>
    <string name="hint_invite_friends">Invite frieds</string>
    <string name="certification">Real-name authentication</string>
    <string name="security_center">Security</string>
    <string name="help_center">Help Center</string>
    <string name="about_us">About</string>
    <string name="setting">Setting</string>
    <string name="my_orders">My orders</string>
    <string name="my_account">My Account</string>
    <string name="certification_result">Authentication Result</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="order_notification">Order Notification</string>
    <string name="chat_notification">Chat Notification</string>
    <string name="language">Voice</string>
    <string name="simplified_chinese">简体中文</string>
    <string name="logout">Logout</string>
    <string name="hint_certification">After Real-name authentication，You can get more trade amount.</string>
    <string name="hint_select_document_type">Choose Authentication Type</string>
    <string name="start_certification">Start Authentication</string>
    <string name="identity_card">ID card</string>
    <string name="passport">Passport</string>
    <string name="driving_licence">Driver License</string>
    <string name="have_new_version">A new version is avaliable</string>
    <string name="i_sell">My sold</string>
    <string name="i_buy">My bought</string>
    <string name="hint_form_market">It will spend %1$s XMR for publish/revoke.\n* It will spend %2$s of the trade amount for every trade.</string>
    <string name="currency_type">Currency</string>
    <string name="hint_premium">Premium Setting</string>
    <string name="premium">Premium</string>
    <string name="trading_value">Sell Price</string>
    <string name="totalsold">Sell Quantity</string>
    <string name="minimum">Minimum Order Quantity</string>
    <string name="payment_term">Payment Method</string>
    <string name="hint_payment_term">Please choose an account to pay</string>
    <string name="collection_term">Collection Account</string>
    <string name="hint_collection_term">Please choose an account to collect payment</string>
    <string name="market_explain">Please leave a message with the advertisement. So the buyer can check first.</string>
    <string name="anytime">Any time</string>
    <string name="custom">Customized</string>
    <string name="every_sunday">Sunday</string>
    <string name="every_monday">Monday</string>
    <string name="every_tuesday">Tuesday</string>
    <string name="every_wednesday">Wednesday</string>
    <string name="every_thursday">Thursday</string>
    <string name="every_friday">Friday</string>
    <string name="every_saturday">Saturday</string>
    <string name="underway">Processing</string>
    <string name="sold_out">Removed</string>
    <string name="my_ads">My Advertisements</string>
    <string name="mein_vertrauen">My trusted</string>
    <string name="trust_me">Who Trust me</string>
    <string name="confirm">Confirm</string>
    <string name="create_new_wallet">New Wallet</string>
    <string name="restore_wallet">Restore from NFC card</string>
    <string name="hint_wallet_name">Wallet Name</string>
    <string name="hint_wallet_passwd">Wallet Password</string>
    <string name="message_strorage_not_writable">External Storage is not writable!</string>
    <string name="no_write_external_storage">Please open the External Storage permissions</string>
    <string name="message_strorage_not_permitted">We really need those External Storage permissions!</string>
    <string name="message_camera_not_permitted">Camera is not permitted, cannot scan the QR code!</string>
    <string name="progress_nfc_write">Writing Tag</string>
    <string name="nfc_write_failed">Writing Tag failed!</string>
    <string name="nfc_write_successful">Writing Tag successful</string>
    <string name="nfc_tag_unsupported">Tag does not support NDEF!</string>
    <string name="nfc_tag_size">Tag provides %1$d bytes, but we need %2$d!</string>
    <string name="nfc_tag_read_undef">I don\'t understand the Tag!</string>
    <string name="nfc_tag_read_what">I don\'t know what you want!</string>
    <string name="nfc_tag_read_success">Reading Tag successful</string>
    <string name="nfc_tag_tap">NFC Available!</string>
    <string name="service_description">Service</string>
    <string name="account_type">Account Type</string>
    <string name="bank_name">Bank Name</string>
    <string name="opening_bank">Branch</string>
    <string name="account_name">Account Name</string>
    <string name="account_no">Account NO.</string>
    <string name="for_payment">Used for payment</string>
    <string name="for_receiving">Used for collection</string>
    <string name="hint_account_information">Input account information</string>
    <string name="hint_opening_bank">Input branch name</string>
    <string name="hint_account_name">Input account name(Optional)</string>
    <string name="hint_account_no">Input account NO.</string>
    <string name="hint_bank_name">Please choose bank</string>
    <string name="choose_bank">Choose bank</string>
    <string name="hint_account_type">Please choose account type</string>
    <string name="add_account">Add Account</string>
    <string name="error_invalid_username">user name or password is not correct</string>
    <string name="register_or_login">Register/Login</string>
    <string name="login_prompt">Login to check more.</string>
    <string name="captcha_error">captcha is not correct</string>
    <string name="send_captcha_success">send SMS code successfully</string>
    <string name="number_trades">Trade %1$s | good comments：%2$s</string>
    <string name="logout_success">You have been logout</string>
    <string name="unauthorized">Operation is not permitted,not login or login is invalid</string>
    <string name="forbidden">Request has been rejected</string>
    <string name="not_found">Requested resource is not exist!</string>
    <string name="request_timeout">Request Timeout!</string>
    <string name="internal_server_error">Server internal error!</string>
    <string name="service_unavailable">Server is not avaliable!</string>
    <string name="http_error_default">Network Error!</string>
    <string name="parse_error">Parse Error!</string>
    <string name="netword_error">network connection error</string>
    <string name="ssl_error">SSl Error!</string>
    <string name="timeout_error">Connection time out</string>
    <string name="error_unknown">Unknow error</string>
    <string name="choose_currency">Choose Market</string>
    <string name="buy_xmr">Buy XMR</string>
    <string name="contact">Contact Seller</string>
    <string name="unit_price">Price</string>
    <string name="seller_message">Seller Message:</string>
    <string name="how_much_to_buy">How much do you want to buy?</string>
    <string name="hint_purchase_amount">Please input the amount you want to buy</string>
    <string name="hint_purchase_quantity">Please input the quantity you want to buy</string>
    <string name="buy_now">Buy Now</string>
    <string name="trading_remind">Trade Notice:</string>
    <string name="order_confirm">Order Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="buying_price">Buy Price</string>
    <string name="purchase_quantity">Buy Quantity</string>
    <string name="payment_amount">Total Amount</string>
    <string name="order_confirm_warn">Notice: The orderd Monero has been locked in the platform, Please be assured the purchase.</string>
    <string name="gathering_wallet">Collecting account</string>
    <string name="label_complaint_content">Complaint content</string>
    <string name="hint_complaint_content">Please input complaint content</string>
    <string name="label_contact">Contact</string>
    <string name="hint_contact">Please input contact</string>
    <string name="label_captions">Upload pictures</string>
    <string name="submit">Submit</string>
</resources>