<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="org.blackey.ui.complain.ComplainViewModel" />

        <import type="me.tatarka.bindingcollectionadapter2.LayoutManagers" />
        <import type="me.goldze.mvvmhabit.binding.viewadapter.recyclerview.LineManagers" />
        <import type="android.support.v7.widget.LinearLayoutManager" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/include"
            layout="@layout/layout_toolbar"
            app:toolbarViewModel="@{viewModel}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_contact" />

        <EditText
            android:textSize="14sp"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_contact"
            android:text="@={viewModel.contactText}"
            android:background="@drawable/bg_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/label_complaint_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:padding="8dp"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_complaint_content"
            android:text="@={viewModel.contentText}"
            android:background="@drawable/bg_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|top"
            android:minLines="6" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_captions" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            binding:adapter="@{viewModel.adapter}"
            binding:itemBinding="@{viewModel.itemBinding}"
            binding:items="@{viewModel.observableList}"
            binding:layoutManager="@{LayoutManagers.linear(LinearLayoutManager.HORIZONTAL,Boolean.FALSE)}"/>

        <Button
            binding:onClickCommand="@{viewModel.submitClick}"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@drawable/color_primary_button"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </LinearLayout>
</layout>