<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_round_white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="16.5dp">


    <TextView
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:text="@string/order_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="12sp"
            android:textColor="@color/textColorVice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buying_price" />

        <TextView
            android:id="@+id/buying_price"
            android:gravity="right"
            android:textSize="12sp"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="12sp"
            android:textColor="@color/textColorVice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase_quantity" />

        <TextView
            android:id="@+id/purchase_quantity"
            android:gravity="right"
            android:textSize="12sp"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="12sp"
            android:textColor="@color/textColorVice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_amount" />

        <TextView
            android:id="@+id/payment_amount"
            android:gravity="right"
            android:textSize="12sp"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="12sp"
            android:textColor="@color/textColorVice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gathering_wallet" />

        <Spinner
            android:layout_marginLeft="24dp"
            android:id="@+id/spinner_select_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


    </LinearLayout>

    <TextView
        android:textColor="@color/custom_progress_red_progress"
        android:padding="8dp"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/order_confirm_warn" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#D9D9D9"/>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_sure"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/f0"/>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="16dp"/>


    </LinearLayout>
</LinearLayout>
