<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="org.blackey.ui.mine.setting.SettingViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            android:id="@+id/include"
            layout="@layout/layout_toolbar"
            binding:toolbarViewModel="@{viewModel}" />


        <TextView
            android:background="@color/f0"
            android:layout_width="match_parent"
            android:textSize="12sp"
            android:text="@string/notification_setting"
            android:paddingTop="20dp"
            android:paddingLeft="16dp"
            android:paddingBottom="8dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:paddingLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text="@string/order_notification" />


            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>


        <View
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/f0"/>

        <LinearLayout
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <TextView
                android:paddingLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text="@string/chat_notification" />


            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:background="@color/f0"/>

        <LinearLayout
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <TextView
                android:paddingLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text="@string/language" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_weight="1"
                android:text="@string/simplified_chinese" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                binding:srcCompat="@mipmap/arrows_right" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@color/f0"/>

        <Button
            android:visibility="@{viewModel.logoutVisibility}"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            binding:onClickCommand="@{viewModel.logoutOnClickCommand}"
            android:text="@string/logout" />

        <View
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/f0"/>


    </LinearLayout>
</layout>